fix a11y contrast; clickable elements gutter

--- a/src/styles.css
+++ b/src/styles.css
@@ -118,6 +118,10 @@ a.menu-toggle:hover {
   text-decoration-color: var(--secondary-foreground);
 }
 
+.page-footer a:nth-child(2), .page-footer a:nth-child(3) {
+  margin-left: 1rem;
+}
+
 .vcard a:focus,
 .vcard a:hover,
 .page-footer a:focus,
